JETcompiler/Tests/bad/bad019.myout
function "foo" expects 1 arguments, and 2 were provided, line 4.
